# practice-vs-preach

./: .env.sample  .envrc  .gitignore  Dockerfile  Makefile  README.md  chroma_test.py  convert_date_in_db.py  cosine_test.py  docker-run.sh  env_gcloud_run.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
api-test/: fast.py
data/: README.md  keywords_wp20_mig.csv  speeches-wahlperiode-21-small.csv  urls-wahlperiode-20.csv  urls.csv
data/manifestos/: README.md
notebooks/: Cross_encoder_for_alignment.ipynb  bundestag_xml_parser.ipynb  poc_manifesto_summary.ipynb
practicepreach/: alignment.py  cmp_visualisation.py  constants.py  cosine_sim.py  fast.py  generate_manifesto_dataframe.py  keyword_cmp_matching.py  keyword_extractor.py  keyword_extractors.py  manifesto_model.py  params.py  rag.py  stopwords_de.txt  test.py  tools.py  updater.py  wahlperiode_converter.py
practicepreach/keyword_matching/: cmp_visualisation.py  keyword_cmp_matching.py  keyword_extractors.py  manifesto_model.py
prp/: tools.py
terraform/: README.md  apis.tf  billing.tf  cloud_run.tf  compute.tf  iam.tf  main.tf  network.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
terraform/files/: chromadb-startup.sh
