[project]
name = "practice-vs-preach"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bundestagsapy>=1.4",
    "dotenv>=0.9.9",
    "google-genai==1.51.0",
    "grpcio==1.76.0",
    "ipdb==0.13.13",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "ipywidgets==8.1.5",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.5",
    "jupyterlab-code-formatter==3.0.2",
    "jupyterlab-execute-time==3.2.0",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "langchain==1.0.7",
    "langchain-chroma==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.5",
    "langchain-google-genai==3.1.0",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.3",
    "langsmith==0.4.43",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nbresult==0.1.1",
    "nltk==3.9.1",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numpy>=1.26.4",
    "pandas==2.2.3",
    "protobuf==6.33.1",
    "pylint==3.3.4",
    "pypdf==6.3.0",
    "pytest==8.3.4",
    "wikipedia==1.4.0",
    "xmltodict>=1.0.2",
    "selenium",
    "jupyter>=1.1.1",
    "jupyter-console>=6.6.3",
    "ipython-pygments-lexers>=1.1.1",
    "fastapi>=0.123.5",
]
